--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
      <div class="container-fluid text-white fs-head text-center mt-5 p-5">
         <h4>Saliha M.R</h4>
         <p>For more HTML,CSS and coding tutorial-please click on the <br> below to subscribe to my channel</p>
-        <div class="">
-          <i class="fa-brands fa-facebook-f me-5 rounded-5 bg-danger w-5"></i>
-          <i class="fa-brands fa-dribbble me-5  rounded-5 bg-danger w-5"></i>
-          <i class="fa-brands fa-whatsapp  rounded-5 bg-danger w-5"></i>
+        <div class="d-flex justify-content-center">
+         <div class="icons"> <i class="fa-brands fa-facebook-f"></i></div>
+         <div class="icons"><i class="fa-brands fa-dribbble"></i></div>
+          <div class="icons"><i class="fa-brands fa-whatsapp "></i></div>
         </div>
      </div>
 </body>
