--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
   </div>
   <!-- card end -->
 
+  <div>
+    
+  </div>
   <!-- banner section -->
      <div class="container-fluid mt-5 text-center fs-head p-5 bg-black bg-gradient">
           <h1 class="text-white text-center">Let Me Get You A beautiful Website</h1>
